--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "tronweb": "^3.2.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
